--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "aggrid-fetch-netlify",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "ag-grid-enterprise": "^31.3.2",
-    "ag-grid-react": "^31.3.2",
-    "axios": "^1.7.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
-  },
+    "dependencies": {
+      "@testing-library/jest-dom": "^5.14.1",
+      "@testing-library/react": "^13.0.0",
+      "@testing-library/user-event": "^13.2.1",
+      "ag-grid-enterprise": "^31.3.2",
+      "ag-grid-react": "^31.3.2",
+      "axios": "^1.7.1",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-scripts": "5.0.1",
+      "web-vitals": "^2.1.0",
+      "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
