--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "aggrid-fetch-netlify",
   "version": "0.1.0",
   "private": true,
-    "dependencies": {
-      "@testing-library/jest-dom": "^5.14.1",
-      "@testing-library/react": "^13.0.0",
-      "@testing-library/user-event": "^13.2.1",
-      "ag-grid-enterprise": "^31.3.2",
-      "ag-grid-react": "^31.3.2",
-      "axios": "^1.7.1",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
-      "react-scripts": "5.0.1",
-      "web-vitals": "^2.1.0",
-      "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
-    },
+  "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^31.3.2",
+    "@ag-grid-community/core": "^31.3.2",
+    "@ag-grid-enterprise/charts": "^31.3.2",
+    "@ag-grid-enterprise/charts-enterprise": "^31.3.2",
+    "@ag-grid-enterprise/column-tool-panel": "^31.3.2",
+    "@ag-grid-enterprise/menu": "^31.3.2",
+    "@ag-grid-enterprise/row-grouping": "^31.3.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "ag-charts-enterprise": "^9.3.1",
+    "ag-grid-charts-enterprise": "^31.3.2",
+    "ag-grid-enterprise": "^31.3.2",
+    "ag-grid-react": "^31.3.2",
+    "axios": "^1.7.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
