--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@ag-grid-enterprise/charts-enterprise": "^31.3.2",
     "@ag-grid-enterprise/column-tool-panel": "^31.3.2",
     "@ag-grid-enterprise/menu": "^31.3.2",
+    "@ag-grid-enterprise/multi-filter": "^31.3.2",
     "@ag-grid-enterprise/row-grouping": "^31.3.2",
+    "@ag-grid-enterprise/sparklines": "^31.3.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
